--- a/deployments/example_arb_orbit.yaml
+++ b/deployments/example_arb_orbit.yaml
@@ -10,6 +10,7 @@ config:
     emergency_admin: '0x928e3bCf7274ABf5450a28ff168C07fa2B9A28f0'
     ownership_admin: '0xD6e90d0441B1362f5C062950F77Cf4f2068fa574'
     parameter_admin: '0x78F10Ce28FdD3e595F15bFce2D0D83B00B314cF4'
+    vault: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
   explorer_base_url: https://arbiscan.io
   native_currency_coingecko_id: ethereum
   native_currency_symbol: ETH
@@ -29,7 +30,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/stableswap/factory/factory_v_100.vy
         contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1723026962
+        deployment_timestamp: 1723027994
         deployment_type: normal
       implementation:
         address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
@@ -41,7 +42,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1723026960
+        deployment_timestamp: 1723027992
         deployment_type: blueprint
       math:
         address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
@@ -53,7 +54,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
         contract_path: /contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1723026959
+        deployment_timestamp: 1723027991
         deployment_type: normal
       meta_implementation:
         address: '0xad9485a04927970E8448eB0DA2D2035FF22Ec546'
@@ -65,7 +66,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1723026961
+        deployment_timestamp: 1723027993
         deployment_type: blueprint
       views:
         address: '0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB'
@@ -77,7 +78,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
         contract_path: /contracts/amm/stableswap/views/views_v_120.vy
         contract_version: 1.2.0
-        deployment_timestamp: 1723026960
+        deployment_timestamp: 1723027992
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -90,7 +91,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026964
+        deployment_timestamp: 1723027997
         deployment_type: normal
       implementation:
         address: '0x5169928944522977ee7F9968b9EaF6a5917b5B1F'
@@ -102,7 +103,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026964
+        deployment_timestamp: 1723027997
         deployment_type: blueprint
       math:
         address: '0xB372E22cC331980f8D5dbD955789e67420E0a53f'
@@ -114,7 +115,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026963
+        deployment_timestamp: 1723027996
         deployment_type: normal
       views:
         address: '0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3'
@@ -126,7 +127,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026963
+        deployment_timestamp: 1723027996
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -139,7 +140,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026967
+        deployment_timestamp: 1723027999
         deployment_type: normal
       implementation:
         address: '0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B'
@@ -151,7 +152,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1723026966
+        deployment_timestamp: 1723027999
         deployment_type: blueprint
       math:
         address: '0x3980F1806b55e38dA48390ffFbf2b2FEFB329586'
@@ -163,7 +164,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1723026965
+        deployment_timestamp: 1723027998
         deployment_type: normal
       views:
         address: '0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A'
@@ -175,7 +176,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1723026966
+        deployment_timestamp: 1723027999
         deployment_type: normal
   gauge:
     child_gauge:
@@ -189,7 +190,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/gauge/child_gauge/factory/factory_v_100.vy
         contract_path: /contracts/gauge/child_gauge/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1723026956
+        deployment_timestamp: 1723027989
         deployment_type: normal
       implementation:
         address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
@@ -201,7 +202,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/65d63770a56f231e123c811eb734813156b9cc36/contracts/gauge/child_gauge/implementation/implementation_v_020.vy
         contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_020.vy
         contract_version: 0.2.0
-        deployment_timestamp: 1723026957
+        deployment_timestamp: 1723027990
         deployment_type: normal
   governance:
     agent:
@@ -214,7 +215,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/8c05198c971b90d3bb120de91f55485a304c7847/contracts/governance/agent/agent_v_100.vy
       contract_path: /contracts/governance/agent/agent_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1723026954
+      deployment_timestamp: 1723027987
       deployment_type: blueprint
     relayer:
       arb_orbit:
@@ -227,7 +228,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/b6b9850aba3e6964e8dfd732251024ff7d1bb7cd/contracts/governance/relayer/arb_orbit/relayer_v_101.vy
         contract_path: /contracts/governance/relayer/arb_orbit/relayer_v_101.vy
         contract_version: 1.0.1
-        deployment_timestamp: 1723026955
+        deployment_timestamp: 1723027989
         deployment_type: normal
     vault:
       address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
@@ -239,7 +240,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/8c05198c971b90d3bb120de91f55485a304c7847/contracts/governance/vault/vault_v_100.vy
       contract_path: /contracts/governance/vault/vault_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1723026956
+      deployment_timestamp: 1723027989
       deployment_type: normal
   helpers:
     deposit_and_stake_zap:
@@ -252,7 +253,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1723026967
+      deployment_timestamp: 1723028000
       deployment_type: normal
     rate_provider:
       address: '0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE'
@@ -264,7 +265,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/3be84d0a77b340f002f759131d0dfd2477f58ca9/contracts/helpers/rate_provider/rate_provider_v_100.vy
       contract_path: /contracts/helpers/rate_provider/rate_provider_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1723026969
+      deployment_timestamp: 1723028001
       deployment_type: normal
     router:
       address: '0x864C57A226c39F4cfC30A589B9198D583Ad6971a'
@@ -276,7 +277,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_path: /contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1723026959
+      deployment_timestamp: 1723027991
       deployment_type: normal
     stable_swap_meta_zap:
       address: '0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF'
@@ -288,7 +289,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1723026969
+      deployment_timestamp: 1723028001
       deployment_type: normal
   registries:
     address_provider:
@@ -301,7 +302,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/address_provider/address_provider_v_201.vy
       contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
       contract_version: 2.0.1
-      deployment_timestamp: 1723026958
+      deployment_timestamp: 1723027990
       deployment_type: normal
     metaregistry:
       address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
@@ -313,7 +314,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1723026958
+      deployment_timestamp: 1723027991
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -326,7 +327,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1723026981
+          deployment_timestamp: 1723028013
           deployment_type: normal
         tricryptoswap:
           address: '0x1A82e62a6cCb405fEbC1E019d8B45Ef5B4247204'
@@ -338,7 +339,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1723026981
+          deployment_timestamp: 1723028014
           deployment_type: normal
         twocryptoswap:
           address: '0x06e3AbE34C8C4660cC7275D16373b747361dFe2F'
@@ -350,5 +351,5 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1723026982
+          deployment_timestamp: 1723028014
           deployment_type: normal
